# bond

rust/: .gitignore  Cargo.toml  README.md
rust/benches/: bond_bench.rs
rust/src/: constants.rs  error.rs  gen.rs  lib.rs  marshal.rs  reader.rs  schema.rs  value.rs  varint.rs  writer.rs
rust/src/protocol/: compact.rs  fast.rs  mod.rs  simple.rs  simple_json.rs
rust/tests/: coverage.rs  errors.rs  roundtrip.rs  vectors.rs
